static/sass/partials/_panel.sass
@import susy
@import compass/css3

@import variables

%panel-base
  +container
  position: relative // Make panel as a container can has absolute position children
  margin-top: $space-s
  background: white
  min-height: 100px
  padding-bottom: 1em

.panel
  @extend %panel-base
  border: 1px

.panel-padding
  @extend %panel-base
  padding-left: 18px
  padding-right: 18px

.space-vertical-s+.panel
  margin-top: 0

.space-vertical-m+.panel
  margin-top: 0

.space-vertical-l+.panel
  margin-top: 0

$header-height: 150px

.panel-header
  height: $header-height

.fund-panel-header
  height: 190px

.panel-bar
  +container
  line-height: 55px

.panel-bar-s
  +container
  line-height: 33px
  background: $color-gallery
  color: $color-emperor
  padding-left: 15px

  dl
    float: left

  dt
    +inline-block

  dd
    +inline-block
    margin-right: 20px

.panel-title-bar
  @extend .panel-bar
  border-bottom: 2px solid $color-pomegranate

.panel-title-bar-gray
  @extend .panel-title-bar
  background-color: $color-gallery

.panel-title-bar__no-border
  @extend .panel-title-bar
  border-bottom: 0

.panel-product-title-bar
  @extend .panel-bar
  border-bottom: 1px solid #d3d3d3
  line-height: 40px

.panel-product-title
  border: 1px
  padding: 0 1.4em
  margin: 1em 0
  border-left: 2px solid $color-pomegranate
  line-height: 1
  font-size: $font-l

.panel-product-title-no-border
  @extend .panel-product-title
  border-left: 0
  padding-top: 10px
  padding-left: 0
  margin-top: 0

.panel-title
  padding: 0
  font-size: $font-l
  margin-right: 1em
  +float-left

.panel .panel-title
  @extend .padding-l-r-s

.panel-title-l
  @extend .panel-title
  font-size: $font-l

.panel-title-right-item
  +float-right
  margin-right: 20px

  +unstyled-link

.panel-inner
  display: block

.panel-inner-center
  @extend .panel-inner
  text-align: center

.panel-footer
  position: absolute
  bottom: 0
  width: 100%

.panel-tabs
  +float-left

.panel-tab
  +float-left
  position: relative
  font-size: $font-s
  padding: 0 2em
  background-color: transparent

  &.active
    background-color: $color-pomegranate
    color: white

    a
      +link-colors(white, white)

  a
    +unstyled-link()
    +link-colors(black, $color-pomegranate)

.panel-sub-tabs
  background: white
  padding: 10px 1em
  border-bottom: 1px solid #DDD

a.panel-sub-tab
  display: inline-block
  +unstyled-link
  @extend .button-round-mini

  &.active
    background: $color-pomegranate
    +link-colors(white)

.panel-text
  padding: 20px
  font-size: 14px

.panel-preorder
  padding: 1em
  text-align: center
  line-height: 35px

.product-title
  text-overflow: ellipsis
  overflow: hidden
  white-space: nowrap

.panel-plain-title
  margin-top: $space-m
  font-size: $font-m

.panel-annotation
  background: #EDF1F5
  color: $color-text-d4
  font-size: $font-xs
  padding: 10px 5px
  margin: 10px 0

